--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ logging.level.root=WARN
 logging.level.es.upm.miw=DEBUG
 
 #Profile develop
-spring.profiles.active=dev
+spring.profiles.active=prod
 
